Force .tablewrapper to use fixed column widths
Most noticeably, this fixes a long standing bug on the Oxfordshire
homepage where the "how to" and list of reports made the right-hand
edge of .content spill outside its parent.

--- a/web/cobrands/sass/_layout.scss
+++ b/web/cobrands/sass/_layout.scss
@@ -617,6 +617,7 @@ body.authpage {
   display:table;
   width:100%;
   padding: 0 0 1em;
+  table-layout: fixed;
   >div {
     display:table-cell;
     width:50%;
